# Posix-exchange-training

./: README.md
C++_hands_on_programming_NEW/: Readme.md  build_and_run_tests.sh
C++_hands_on_programming_NEW/gtest/: BUILD  Gtest_Ipc.cpp  Gtest_Ipc.h  Gtest_IpcCopyFile.cpp  Gtest_Pipe.cpp  Gtest_Queue.cpp  Gtest_Shm.cpp  (+1 more)
C++_hands_on_programming_RC/: Readme.md  WORKSPACE  build_and_run_tests.sh  build_and_run_tests_without_cleaning.sh  setup_environment.sh
C_hands_on_programming_2/: Makefile  README.md  ipc_common_file.c  ipc_common_file.h  ipc_receivefile.c  ipc_sendfile.c
Rust_hands_on_programming/: README.md  build_and_test.sh  setup_environment.sh
Rust_hands_on_programming/ipc_copy_file/: Cargo.toml
Rust_hands_on_programming/ipc_copy_file/src/: arg_handler.rs  file_handler.rs  header.rs  ipc_errors.rs  lib.rs  queue.rs  tools.rs
Rust_hands_on_programming/ipc_copy_file/src/arg_handler/: arguments_new_tests.rs  query_type_tests.rs  start_tests.rs
Rust_hands_on_programming/ipc_copy_file/src/file_handler/: writer_and_reader_tests.rs
Rust_hands_on_programming/ipc_copy_file/src/header/: header_tests.rs
Rust_hands_on_programming/ipc_copy_file/src/ipc_errors/: errors_tests.rs
Rust_hands_on_programming/ipc_copy_file/src/queue/: queue_handler_test.rs  queue_transfer_test.rs
Rust_hands_on_programming/ipc_copy_file/src/tools/: check_file_exist_tests.rs  check_file_path_tests.rs  compare_file_names_tests.rs  is_there_enough_space_available_tests.rs  nap_testing.rs  return_file_size_tests.rs  stdoutlogger_tests.rs  tests_of_printed_elements.rs
(+41 files in other folders)
